<resources>
    <string name="app_name">FitDudeGym</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="workout_sessions">Workout Sessions</string>
    <string name="gym_instructors">Gym Instructors</string>
    <string name="new_workout">New Workout</string>
    <string name="view_gyms">View Gyms</string>
    <string name="save">SAVE</string>
    <string name="workout_type">Workout Type</string>
    <string name="number_of_reps_sets">Number of Reps/Sets</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="time">Time</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="number_of_reps">Number of reps</string>
    <string name="registered_instructors">Registered Instructors</string>
    <string name="workouts">Workouts</string>
    <string name="failed_to_get_data">Failed to get data</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New user?</string>
    <string name="map">Map</string>
    <string name="workout">Workout</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome,</string>
    <string name="we_d_love_to_know_you">We\'d love to know you</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="registered_gyms">Registered Gyms</string>
    <string name="workout_saved">Workout saved</string>
    <string name="something_wrong_happened">Something wrong happened</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="preferred_gym_location">Preferred Gym</string>
    <string name="logout">Logout</string>
</resources>
