<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_viewWorkouts"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="350dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_viewInstructors"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large"
                android:onClick="onWorkoutSessionsClicked">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:tint="@color/grey_60"
                    app:srcCompat="@drawable/ic_add_box" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:text="@string/workout_sessions"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_80" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_viewInstructors"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="350dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/cardView_viewWorkouts"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large"
                android:onClick="onGymInstructorsClicked">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:tint="@color/grey_60"
                    app:srcCompat="@drawable/ic_add_box" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:text="@string/gym_instructors"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_80" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_addWorkout"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toStartOf="@+id/card_viewRegisteredGyms"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large"
                android:onClick="onNewWorkoutClicked">

                <ImageView
                    android:id="@+id/image_addWorkout"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:tint="@color/grey_60"
                    app:srcCompat="@drawable/ic_workout_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/new_workout"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_80" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_viewRegisteredGyms"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView_addWorkout"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large"
                android:onClick="onViewGymsButtonClicked">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:tint="@color/grey_60"
                    app:srcCompat="@drawable/ic_workout_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/view_gyms"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_80" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/bg_gradient_soft" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/overlay_light_90"
            app:itemIconTint="@drawable/color_state_white_2"
            app:itemTextColor="@drawable/color_state_white_2"
            app:menu="@menu/menu_bottom_navigation_shifting" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

